Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -271,36 +271,42 @@ We identified the following suffixes:
 
 \paragraph{Korean Verbs}
 
+We then considered morphemes occurring at least 50 times:
+
 \begin{enumerate}
     \item Root (Valency is not separated in the dataset)
-    \item Derivation
+    \item Derivation:
+    
+    ha (from hada), i (predicative)
+    
     \item Honorific -s-
     \item Tense/Aspect: -ess- for past, -essess- for remote past, -keyss- for future
     \item Formality -p-
-    \item `Syntactic Mood':
-    Indicative -n-
+    \item Mood 1:
     
-    Retrospective -deon-
+    -n-
     
-    Retrospective -ti-
+    -ni-
     
-    Jussive -s-
+    -ri-
     
-    Future -(eu)l (attributive verbs)
+    -deon-
     
     \item `Pragmatic Mood'
     
-    Declarative -ta-, -la-, -ey
+    -da-
     
-    Interrogative -kka, -ya, -ka
+    -ra-
     
-    Propositive -ta, -ca, -ey
+    Interrogative -ka, -lkka, -nya
     
-    Imperative -o, -ela/-ara, -key
+    -ji
     
-    Intimate -e/-a
+    -eo (informal)
     
-    Causual -ji
+    -sida
+    
+    ....
     
     \item Polite -yo
     \item Conjunctive endings
@@ -309,6 +315,7 @@ We identified the following suffixes:
     
     -seo
     
+    and others
     
 \end{enumerate}
 
@@ -324,10 +331,10 @@ We identified the following suffixes:
 1    & 3 & 4     & 5   & 6  & 7 & 8 \\
 bara & sy & eots & eum & ni & da  & &  `wished'\\
 wish & Honorific & Past & Formal & Indicative & Indicative \\
-bara& & gess &  & &  eo & yo & &  `will wish' \\
-wish  & Assertive & && & informal & polite \\
+bara& & gess &  & &  eo & yo  &  `will wish' \\
+wish  & &  Assertive && & informal & polite \\
 \end{tabular}
-`wished'
+
 %https://en.wiktionary.org/wiki/%EB%B0%94%EB%9D%BC%EB%8B%A4
 
 \section{Results}
@@ -337,6 +344,8 @@ wish  & Assertive & && & informal & polite \\
 \subsection{Semantic Scope; Syntactic Structure; Historical Development}
 
 We do not see our account as competing with these. Rather, it specifies tendencies for ordering that could be satisfied at different levels of description.
+
+CARP template in Bantu
 
 \subsection{Relevance; Proximity; Iconicity}
 
