Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -192,7 +192,7 @@ S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
 \end{thm}
 \section{Methods}
 
-\subsection{Data}
+\subsection{Data} % TODO: Becky
 
 We considered:
 
@@ -209,7 +209,7 @@ The Sesotho and Japanese data was previously used by CITE; we reanalyze these da
 
 \paragraph{Hungarian Nouns}
 
-\oaragraph{Finnish Nouns}
+\paragraph{Finnish Nouns}
 
 
 \subsection{Verbs}
