Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -127,6 +127,27 @@
 
 \section{Introduction}
 
+Across languages, words are composed of morphemes, commonly defined as the smallest meaning-bearing units of language.
+%In many cases, words can be segmented into a stem and a set of affixes, though there are
+The order of morphemes within a word follows well-documented cross-linguistic tendencies, for instance, plural markers tend to be closer to noun stems than case markers.
+Different explanations have been proposed for these universal tendencies.
+
+One family of explanations holds that those affixes are closest to the root that are most relevant to the root.
+
+Scope, Syntax, History
+
+Another family of explanations holds that morpheme ordering is to be explained diachronically, and that morpheme order reflects the order of independent words in earlier stages of a language.
+
+- Relevance, Proximity Principle, Iconicity
+
+
+In this work, we study a principle that unifies some of these ideas and is grounded in incremeanl processing and memory.
+
+We focus on the case where words are composed of a stem and some number of affixes that are concatenated.
+
+
+
+
 \section{Morpheme Ordering and Ordering Universals}
 
 Verbs
@@ -193,7 +214,7 @@ S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
 \section{Methods}
 
 \subsection{Data} % TODO: Becky
-
+% why agglutinative?
 We considered:
 
 - UD data for Japanese, Korean, Turkish, Hungarian, Finnish
@@ -206,19 +227,59 @@ The Sesotho and Japanese data was previously used by CITE; we reanalyze these da
 \subsection{Nouns}
 
 \paragraph{Turkish Nouns}
+\begin{enumerate}
+    \item Number
+    \item Possessor number and possessor person
+    \item Case 
+\end{enumerate}
 
 \paragraph{Hungarian Nouns}
+\url{https://cl.lingfil.uu.se/~bea/publ/megyesi-hungarian.pdf}
+\begin{enumerate}
+    \item Number
+    \item Possessor person
+    \item Possessor number
+    \item Case 
+\end{enumerate}
 
 \paragraph{Finnish Nouns}
-
+\begin{enumerate}
+    \item Derivation
+    \item Number
+    \item Case 
+    \item Possessor person and possessor number
+\end{enumerate}
 
 \subsection{Verbs}
 
 \paragraph{Hungarian Verbs}
+\begin{enumerate}
+    \item Voice
+    \item Tense 
+    \item Mood
+    \item Definiteness, person, and number
+\end{enumerate}
 
 \paragraph{Turkish Verbs}
+\begin{enumerate}
+    \item Voice
+    \item Negation / polarity
+    \item Aspect
+    \item Evidential 
+    \item Tense 
+    \item Mood 
+    \item Person and Number
+    \item Formality
+\end{enumerate}
 
 \paragraph{Finnish Verbs}
+\begin{enumerate}
+    \item Voice
+    \item Tense 
+    \item Mood 
+    \item Person and number
+    \item Clitic
+\end{enumerate}
 
 \paragraph{Sesotho Verbs}
 
