--- a/literature.bib
+++ b/literature.bib
@@ -57368,3 +57368,305 @@ pages={491--505}}
 }
 
 
+@article{hyman2003suffix,
+	title="Suffix Ordering in Bantu: A Morphocentric Approach 1",
+	author="Larry M. {Hyman}",
+	journal="",
+	pages="245--281",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1529243220",
+	year="2003"
+}
+
+@article{good2003strong,
+	title="Strong linearity: Three case studies towards a theory of morphosyntactic templatic constructions",
+	author="Jeffrey Craig {Good}",
+	journal="",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1548149543",
+	year="2003"
+}
+
+@article{hyman2003suffix,
+	title="Suffix Ordering in Bantu: A Morphocentric Approach 1",
+	author="Larry M. {Hyman}",
+	journal="",
+	pages="245--281",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1529243220",
+	year="2003"
+}
+
+@article{plag2009suffix,
+	title="Suffix Ordering and Morphological Processing",
+	author="Ingo {Plag} and Harald {Baayen}",
+	journal="Language",
+	volume="85",
+	number="1",
+	pages="109--152",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2015393549",
+	year="2009"
+}
+
+@article{caballero2010scope,
+	title="Scope, phonology and morphology in an agglutinating language: Choguita Rarámuri (Tarahumara) variable suffix ordering",
+	author="Gabriela {Caballero}",
+	journal="Morphology",
+	volume="20",
+	number="1",
+	pages="165--204",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2138159596",
+	year="2010"
+}
+
+@article{plag2002the,
+	title="The role of selectional restrictions, phonotactics and parsing in constraining suffix ordering in English",
+	author="Ingo {Plag}",
+	journal="",
+	pages="285--314",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2278818741",
+	year="2002"
+}
+
+@article{korotkova2010deriving,
+	title="Deriving affix ordering in polysynthesis: evidence from Adyghe",
+	author="Natalia {Korotkova} and Yury {Lander}",
+	journal="Morphology",
+	volume="20",
+	number="2",
+	pages="299--319",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2090194572",
+	year="2010"
+}
+
+@article{reynolds2013out,
+	title="Out of Order?: Russian Prefixes, Complexity-based Ordering and Acyclicity",
+	author="Robert {Reynolds}",
+	journal="",
+	volume="19",
+	number="1",
+	pages="19",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/259241502",
+	year="2013"
+}
+
+@article{manova2010suffix,
+	title="Suffix combinations in Bulgarian: parsability and hierarchy-based ordering",
+	author="Stela {Manova}",
+	journal="Morphology",
+	volume="20",
+	number="1",
+	pages="267--296",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1978719322",
+	year="2010"
+}
+
+@article{baayen2002affix,
+	title="Affix ordering and productivity: a blend of phonotactics and prosody, frequency, and lexical strata",
+	author="Harald {Baayen}",
+	journal="",
+	pages="181--182",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/947807486",
+	year="2002"
+}
+
+@article{fortescue1980affix,
+	title="Affix Ordering in West Greenlandic Derivational Processes",
+	author="M. D. {Fortescue}",
+	journal="International Journal of American Linguistics",
+	volume="46",
+	number="4",
+	pages="259--278",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1974330360",
+	year="1980"
+}
+
+@article{gaeta2013affix,
+	title="Affix ordering and conversion: looking for the place of zero",
+	author="Livio {Gaeta}",
+	journal="Lingue e linguaggio",
+	number="2",
+	pages="145--170",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1895393876",
+	year="2013"
+}
+
+@article{mathangwane2001suffix,
+	title="Suffix Ordering in the Ikalanga Verb Stem: a case against The Repeated Morph Constraint",
+	author="Joyce T. {Mathangwane}",
+	journal="South African journal of african languages",
+	volume="21",
+	pages="396--409",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1541361035",
+	year="2001"
+}
+
+@article{good2003strong,
+	title="Strong linearity: Three case studies towards a theory of morphosyntactic templatic constructions",
+	author="Jeffrey Craig {Good}",
+	journal="",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1548149543",
+	year="2003"
+}
+
+@article{rice2000morpheme,
+	title="Morpheme Order and Semantic Scope: Ordering of the Lexical Items",
+	author="Keren {Rice}",
+	journal="",
+	pages="79--125",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/963848586",
+	year="2000"
+}
+
+@article{eunlee2011ordering,
+	title="Ordering Paradoxes in English Suffixation",
+	author="Ju {EunLee} and Sung {HoonHong}",
+	journal="언어연구",
+	volume="28",
+	pages="95--115",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2241581351",
+	year="2011"
+}
+
+@article{kenmogne2016the,
+	title="The Impact of the Pattern-Growth Ordering on the Performances of Pattern Growth-Based Sequential Pattern Mining Algorithms",
+	author="Edith Belise {Kenmogne}",
+	journal="Computer and Information Science",
+	volume="10",
+	number="1",
+	pages="23--33",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2566763598",
+	year="2016"
+}
+
+@misc{makoto1988ordering,
+	title="ORDERING ALLOCATION SYSTEM",
+	author="Ota {Makoto}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2857004583",
+	year="1988"
+}
+
+@article{nkolola-wakumelo2010suffix,
+	title="Suffix ordering rules: the case of the reciprocal, applicative and causative verb extensions in Sesotho",
+	author="Mildred {Nkolola-Wakumelo} and Mapapali {Mohoanyane}",
+	journal="Journal of Humanities (Lusaka, Zambia)",
+	volume="10",
+	pages="54--65",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1547075383",
+	year="2010"
+}
+
+@article{nichols1973suffix,
+	title="Suffix ordering in proto-uralic",
+	author="Johanna {Nichols}",
+	journal="Lingua",
+	volume="32",
+	number="3",
+	pages="227--238",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2003923589",
+	year="1973"
+}
+
+@article{kanu2009suffix,
+	title="Suffix Ordering in Temne: A Case forMorphotactics",
+	author="Sullay Mohamed {Kanu}",
+	journal="38th Annual Conference on
+African Linguistics",
+	pages="141--150",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2526555888",
+	year="2009"
+}
+
+@article{machobane1993the,
+	title="The ordering restriction between the Sesotho applicative and causative suffixes",
+	author="Malillo {Machobane}",
+	journal="South African journal of african languages",
+	volume="13",
+	number="4",
+	pages="129--137",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2317106236",
+	year="1993"
+}
+
+@article{williams1981argument,
+	title="Argument Structure and Morphology",
+	author="Edwin {Williams}",
+	journal="The Linguistic Review",
+	volume="1",
+	number="1",
+	pages="81--114",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1978471798",
+	year="1981"
+}
+
+@article{baker1985the,
+	title="The mirror principle and morphosyntactic explanation",
+	author="Mark {Baker}",
+	journal="Linguistic Inquiry",
+	volume="16",
+	number="3",
+	pages="373--416",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1573975271",
+	year="1985"
+}
+
+@book{rice2000morpheme,
+	title="Morpheme Order and Semantic Scope: Word Formation in the Athapaskan Verb",
+	author="Keren {Rice}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1502552837",
+	year="2000"
+}
+
+@article{hale2001review,
+	title="Review of “Morpheme Order and Semantic Scope: Word formation in the Athapaskan verbþ” by Keren Rice",
+	author="Kenneth L. {Hale}",
+	journal="Diachronica",
+	volume="18",
+	number="2",
+	pages="383--393",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1976131957",
+	year="2001"
+}
+
+@article{mccarthy2008generalized,
+	title="Generalized Alignment: Introduction and Theory",
+	author="John J. {McCarthy} and Alan {Prince}",
+	journal="",
+	pages="72--76",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1598202253",
+	year="2008"
+}
+
+@article{rice2000morpheme,
+	title="Morpheme Order and Semantic Scope: Ordering of the Lexical Items",
+	author="Keren {Rice}",
+	journal="",
+	pages="79--125",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/963848586",
+	year="2000"
+}
+
+@article{bartos2005morpheme,
+	title="Morpheme Order and Semantic Scope - Word Formation in the Athapaskan Verb",
+	author="H. {Bartos}",
+	journal="Lingua",
+	volume="115",
+	number="5",
+	pages="753--758",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2028160122",
+	year="2005"
+}
+
+@article{rice2000morpheme,
+	title="Morpheme Order and Semantic Scope: THE FUNCTIONAL ITEMS",
+	author="Keren {Rice}",
+	journal="",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2238779983",
+	year="2000"
+}
+
+@article{muysken1981quechua,
+	title="Quechua causatives and logical form : a case study in markedness",
+	author="P.C. {Muysken}",
+	journal="A. Belletti; L. Brandi; L. Rizzi (eds.), Theory of markedness in generative grammar : proceedings of the 1979 GLOW Conference",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2118568204",
+	year="1981"
+}
+
