--- a/name.tex
+++ b/name.tex
@@ -415,9 +415,38 @@ wish  & &  Assertive && & informal & polite \\
 
 TODO collect citations
 
-We do not see our account as competing with these. Rather, it specifies tendencies for ordering that could be satisfied at different levels of description.
+
+In this section, we discuss the linguistic literature on morpheme ordering.
+
+To a significant extent, we do not see the memory--surprisal tradeoff as competing with these.
+Rather, it specifies tendencies for ordering that could be satisfied at different levels of description.
+
+The most straightforwardly related account is that of Bybee (1985) Semantic relevance
 
 CARP template in Bantu
+
+
+Explanations for the orders
+
+
+A related, though different, account is in terms of semantic scope \cite{rice2000morpheme}.
+
+The scope hypothesis is attractive for some morphemes.
+For instance, 
+
+
+\cite{baker1985the} proposed the Mirror Principle, stating that the order of morphemes reflects ...
+
+This can be related to the scope-based explanation to the extent that syntactic structure and word order reflect scope.
+
+\cite{muysken1981quechua}
+
+\cite{mccarthy2008generalized} phonology
+
+\cite{hyman2003suffix}
+
+\cite{kanu2009suffix} morphotactics, not semantic scope
+
 
 \subsection{Relevance; Proximity; Iconicity}
 
