Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -17,6 +17,8 @@
 \usepackage{amssymb}
 \usepackage{lingmacros}
 
+\usepackage{natbib}
+\bibliographystyle{unsrtnat}
 
 %\usepackage{latexsym}
 \usepackage[english]{babel}
@@ -129,9 +131,11 @@ A recent theory (CITE) argues that word and morpheme order in language optimizes
 \section{Introduction}
 
 Across languages, words are composed of morphemes, commonly defined as the smallest meaning-bearing units of language.
-%In many cases, words can be segmented into a stem and a set of affixes, though there are
-The order of morphemes within a word follows well-documented cross-linguistic tendencies, for instance, plural markers tend to be closer to noun stems than case markers.
-Different explanations have been proposed for these universal tendencies.
+Morphemes can take different shapes.
+In many cases, words can be segmented into a sequence of morphemes, as in the English word runners (root run-, derivation -er-, plural -s).
+The order of morphemes within a word follows well-documented cross-linguistic tendencies, for instance, plural markers tend to be closer to noun stems than case markers \citep[112]{greenberg1963universals}.
+These tendencies have been explained in terms of semantic scope \citep{bybee-morphology-1985}
+
 
 One family of explanations holds that those affixes are closest to the root that are most relevant to the root (CITE).
 Other explanations suggest that morphemes are ordered based on (TODO CITE).
@@ -148,13 +152,19 @@ In this work, we examine this theory on a broader basis by considering data from
 We focus on the case where words are composed of a stem and some number of affixes that are concatenated.
 
 
-
+Greenberg 1963:  "the expression of number almost always comes between the noun base and the expression of case" (Greenberg 1963:112)
 
 %Scope, Syntax, History
 %Another family of explanations holds that morpheme ordering is to be explained diachronically, and that morpheme order reflects the order of independent words in earlier stages of a language.
 %- Relevance, Proximity Principle, Iconicity
 
 
+We focus on languages where words tend to have multiple morphemes and these are mostly realized separately. Such languages are referred to as agglutinative (Greenberg 1954).
+
+
+Bybee on explanation:
+- regarding the historical explanation (Givon 1971, Vennemann 1973):
+Morphology is not always fossilizes syntax (Bybee and Brewer 1980, Bybee 1985 p. 39--40)
 
 
 \section{Morpheme Ordering and Ordering Universals}
@@ -432,6 +442,8 @@ The relation  between mutual information and relevance
 
 \section{Conclusion}
 
+\bibliography{literature}
+\bibliographystyle{natbib}
 
 \end{document}
 
