--- a/literature.bib
+++ b/literature.bib
@@ -57506,11 +57506,10 @@ pages={491--505}}
 	year="2003"
 }
 
-@article{rice2000morpheme,
-	title="Morpheme Order and Semantic Scope: Ordering of the Lexical Items",
-	author="Keren {Rice}",
-	journal="",
-	pages="79--125",
+@book{rice2000morpheme,
+	title="Morpheme Order and Semantic Scope: Woed Formation in the Athapaskan Verb",
+	author="Keren Rice",
+	publisher={Cambridge University Press},
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/963848586",
 	year="2000"
 }
@@ -57654,19 +57653,111 @@ African Linguistics",
 	year="2005"
 }
 
-@article{rice2000morpheme,
-	title="Morpheme Order and Semantic Scope: THE FUNCTIONAL ITEMS",
-	author="Keren {Rice}",
-	journal="",
-	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2238779983",
-	year="2000"
-}
-
 @article{muysken1981quechua,
 	title="Quechua causatives and logical form : a case study in markedness",
 	author="P.C. {Muysken}",
 	journal="A. Belletti; L. Brandi; L. Rizzi (eds.), Theory of markedness in generative grammar : proceedings of the 1979 GLOW Conference",
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2118568204",
 	year="1981"
+}
+
+@incollection{venneman1973explanation,
+	title={Explanation in Syntax},
+       editor={John Kimball},
+       booktitle={Syntax and Semantics2},
+       address = {New York},
+       pages={1--50},
+       year={1973}
+}
+
+
+@article{givon1971historical,
+	title="Historical syntax and synchronic morphology: An archaeologist's field trip",
+	author="Talmy Giv{\'o}n",
+	journal="CLS",
+	volume={7},
+	pages="349--415",
+	year="1971"
+}
+
+@preprint{Hahn2020modeling,
+  author    = {Michael Hahn and
+               Judith Degen and Richard Futrell},
+  title     = {Modeling word and morpheme order in natural language as an efficient tradeoff of memory and surprisal},
+  journal   = {In Preparation},
+  year      = {2020},
+  preprint       = {https://psyarxiv.com/nu4qz},
+  archivePrefix = {psyarxiv},
+  github = {https://github.com/m-hahn/memory-surprisal}
+}
+
+@article{culbertson2020from,
+        title="From the world to word order: deriving biases in noun phrase order from statistical properties of the world",
+        author="Jennifer {Culbertson} and Marieke {Schouwstra} and Simon {Kirby}",
+        journal="Language",
+        volume={96},
+        number={3},
+        notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/3014349462",
+        year="2020"
+}
+
+
+@article{haspelmath1993the,
+	title="The diachronic externalization of inflection",
+	author="Martin {Haspelmath}",
+	journal="Linguistics",
+	volume="31",
+	number="2",
+	pages="279--310",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2025071589",
+	year="1993"
+}
+
+@article{mithun2000the,
+	title="The reordering of morphemes",
+	author="Marianne {Mithun}",
+	journal="",
+	pages="231",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2475963122",
+	year="2000"
+}
+
+@article{mithun1995affixation,
+	title="Affixation and Morphological Longevity",
+	author="Marianne {Mithun}",
+	journal="",
+	pages="73--97",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/94825293",
+	year="1995"
+}
+
+@book{baker1988incorporation,
+	title="Incorporation: A Theory of Grammatical Function Changing",
+	author="Mark Cleland {Baker}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1563307389",
+	year="1988"
+}
+
+@book{foley1984functional,
+	title="Functional Syntax and Universal Grammar",
+	author="William A. {Foley} and Robert D. Van {Valin}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1997256649",
+	year="1984"
+}
+
+@book{chierchia1990meaning,
+	title="Meaning and Grammar: An Introduction to Semantics",
+	author="Gennaro {Chierchia} and Sally {McConnell-Ginet}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2076784334",
+	year="1990"
+}
+
+@article{valin1992a,
+	title="A synopsis of role and reference grammar",
+	author="Robert D. Van {Valin}",
+	journal="",
+	pages="1",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/142886848",
+	year="1992"
 }
 
